# 2025_Spring_Edge-AI-Lab4

./: README.md  aimet-amp.py  aimet_autoquant_onnx.py  demo.py  export.py  export_with_calib.py  model.py  pyproject.toml
android/: build.gradle  gradle.properties  settings.gradle
android/SuperResolution/: README.md  build.gradle
android/SuperResolution/src/main/: AndroidManifest.xml
android/SuperResolution/src/main/assets/: README.txt
android/SuperResolution/src/main/java/com/quicinc/superresolution/: MainActivity.java  SuperResolution.java
android/SuperResolution/src/main/java/com/quicinc/tflite/: AIHubDefaults.java  TFLiteHelpers.java
android/SuperResolution/src/main/res/layout/: main_activity.xml
android/SuperResolution/src/main/res/values/: strings.xml  styles.xml  themes.xml
android/SuperResolution/src/main/res/values-night/: themes.xml
android/WhisperKit/: README.md
android/gradle/wrapper/: gradle-wrapper.properties
android/image_preprocessing_helpers/: ImageProcessing.java
android/tflite_helpers/: AIHubDefaults.java  TFLiteHelpers.java
