[project]
name = "2025-spring-edge-ai-lab4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aimet-onnx>=2.7.0",
    "eager>=0.0.1",
    "onnxsim>=0.4.36",
    "optimum[onnxruntime]>=1.25.3",
    "qai-hub-models[lama-dilated]>=0.30.2",
]
